--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,11 @@
               "src/assets"
             ],
             "styles": [
+
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+
               "node_modules/angular-calendar/css/angular-calendar.css",
+
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
@@ -92,7 +96,11 @@
               "src/assets"
             ],
             "styles": [
+
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+
               "node_modules/angular-calendar/css/angular-calendar.css",
+
               "src/styles.css"
             ],
             "scripts": []
